
		Alan and Rolf, please report the results of the upgrade.


v0.83.13	13-Feb-2006

	upgrade:
		Start mbsetup and leave. If files databases need to be fixed
		it will then be done.

	mbselib.a:
		Fixed another 32/64 bit issue in the files databases and added
		automatic correction if detected.

	mbsebbs:
		Writes LINES and COLUMNS environment into data.msg so that the
		joe editor can use that.

	mbcico:
		Added real error message for failed outgoing IP connections.

	mbtask:
		Fixed startup problem on new installations.
		Some code cleanup.


v0.83.12	06-Feb-2006 - 13-Feb-2006

	mbselib.a:
		On socket send error 2, abort the client program.

	mbsebbs:
		Added screen rows detection using ANSI sequences needed for
		some terminal programs like minicom.

	mbtask:
		On shutdown also send PART and QUIT messages to all our links
		for our own users if they are still online so that the network
		will keep the correct state.
		Removed all thread programming so that mbtask is now a single
		process again. This should fix the crash problem during chat.


v0.83.11	28-Jan-2006 - 06-Feb-2006

	mbtask:
		When the IBC server detects a IP change of a remote server it
		will completly restart the connection with that remote.
		Made several functions multithread aware.
		Finished tasks now report using a signal call.
		The main scheduler doesn't run in a thread anymore.
		Removed some debug logging in chat.

	mbcico:
		Assume EXTCMD is set when GZ or BZ2 is active.

	mbstat:
		Added semafore names to help display.

	mbmon:
		In chat beeps are heard for system messages.
		Removed most debug logging in chat.
		Added width marker for chat input and fixed linelength.

	mbsebbs:
		Removed most debug logging in chat.
		Added width marker for chat input and fixed linelength.


v0.83.10	25-Jan-2006 - 28-Jan-2006

	upgrade:
		In menus 7.n.3.14 check if the NR flag is off, unless you need
		it (which I doubt).

	mbcico:
		Implemented binkp NR option. We don't really make use of it,