@@ -72,6 +72,7 @@ static int getfree(void);
 
 extern unsigned int	rcvdbytes;
 extern int		zmodem_requested;
+extern int		Rxtimeout;
 
 
 
@@ -86,6 +87,7 @@ int zmrcvfiles(int want1k, int wantg)
 
     Syslog('+', "%s: start receive", protname());
 
+    Rxtimeout = 10;
     zsendline_init();
     if (secbuf == NULL) 
 	secbuf = malloc(MAXBLOCK+1);
